done up to page 149(on pdf)

--- a/picshare/index.html
+++ b/picshare/index.html
@@ -20,9 +20,20 @@
   <div id="main" class="main"></div>
   <script src="picshare.js"></script>
   <script>
-    Elm.Picshare.init({
-      node: document.getElementById('main')
-    });
+    (function() {
+      var app = Elm.Picshare.init({
+        node: document.getElementById('main')
+      });
+      app.ports.listen.subscribe(listen);
+
+      function listen(url) {
+        var socket = new WebSocket(url);
+
+        socket.onmessage = function(event) {
+          app.ports.receive.send(event.data);
+        };
+      }
+    })();
   </script>
 </body>
 </html>
